--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <uses-feature android:name="android.hardware.location.gps" />
 
     <application
@@ -18,9 +19,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".activity.ServicoActivity"
+            android:label="@string/title_activity_servico"
+            android:parentActivityName=".activity.RequisicoesActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.tccunip.sevice.activity.RequisicoesActivity" />
+        </activity>
+        <activity
             android:name=".activity.ClienteActivity"
             android:label="@string/title_activity_cliente"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activity.RequisicoesActivity" />
         <activity
             android:name=".activity.MainActivity"
