--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tccunip.sevice">
-    <!--
-         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the 'MyLocation' functionality.
-    -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-    <uses-feature android:name="android.hardware.location.gps" />
+    package="com.services">
 
     <application
         android:allowBackup="true"
@@ -18,53 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".activity.ServicoActivity"
-            android:label="@string/title_activity_servico"
-            android:parentActivityName=".activity.RequisicoesActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.tccunip.sevice.activity.RequisicoesActivity" />
-        </activity>
-        <activity
-            android:name=".activity.ClienteActivity"
-            android:label="@string/title_activity_cliente"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activity.RequisicoesActivity" />
-        <activity
-            android:name=".activity.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activity.CadastroActivity"
-            android:label="@string/tituloTelaCadastro"
-            android:parentActivityName=".activity.MainActivity"
-            android:windowSoftInputMode="stateHidden" />
-        <activity
-            android:name=".activity.LoginActivity"
-            android:label="@string/tituloTelaLogin"
-            android:parentActivityName=".activity.MainActivity"
-            android:windowSoftInputMode="stateHidden" />
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
-
-        <uses-library android:name="com.google.android.maps" />
     </application>
 
 </manifest>
